fix: sidebar layout error on Firefox

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -43,6 +43,7 @@
   }
   &.layout--page--sidebar {
     .page__main {
+      height: 100%;
       @include overflow(auto);
       @media print {
         @include overflow(unset);
